hard-gists/1927a29f642593861afc/run.log
=== Docker Run Log for 1927a29f642593861afc ===
Started at: Mi 29. Okt 12:34:19 CET 2025

[2025-10-29 12:34:20] START: Running container for 1927a29f642593861afc
[2025-10-29 12:34:20] SUCCESS: Container c7a83e0edd6af7e496f8a775ab3f8274b7735cf7db4abbf70e6230951271b674 started for 1927a29f642593861afc
=== Container logs for 1927a29f642593861afc ===
  File "/snippet.py", line 10
    print 1 - scipy.spatial.distance.cosine(x, y)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1927a29f642593861afc ===
[2025-10-29 12:34:22] INFO: Container c7a83e0edd6af7e496f8a775ab3f8274b7735cf7db4abbf70e6230951271b674 has stopped
